--- a/InstallBaker/InstallBaker.csproj
+++ b/InstallBaker/InstallBaker.csproj
@@ -126,7 +126,7 @@
     </Compile>
     <Compile Include="UI\MyToolWindow.cs" />
     <Compile Include="Integration\Guids.cs" />
-    <Compile Include="Resources.Designer.cs">
+    <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
@@ -137,7 +137,7 @@
     <Compile Include="Integration\PkgCmdID.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources.resx">
+    <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
